--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
+        </dependency><dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>bootstrap</artifactId>
+        <version>5.1.3</version>
+    </dependency>
+
     </dependencies>
 
     <build>
